Get country/region/city

--- a/penfriend/templates/home.html
+++ b/penfriend/templates/home.html
@@ -20,8 +20,8 @@
   <ul class="list-group list-group-flush">
       <li class="list-group-item">Country/Region/City:
           {% if usr.profile.country %}
-              {{ usr.profile.country }}/
-              {{ usr.profile.region  }}/
+              {{ usr.profile.country }}
+              {{ usr.profile.region  }}
               {{ usr.profile.city }}
             {% endif %}
       </li>
