--- a/penfriend/templates/login.html
+++ b/penfriend/templates/login.html
@@ -17,7 +17,7 @@
                     {% endfor %}
          </div>
     {% endfor %}
-        <button type="submit" class="btn btn-default">Save</button>
+        <button type="submit" class="btn btn-default">Login</button>
     </form>
 {% endif %}
 {% endblock %}
